--- a/src/lambda-functions/patient/patient.yaml
+++ b/src/lambda-functions/patient/patient.yaml
@@ -19,8 +19,8 @@ Resources:
   GetAPatientFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: patient
-      Handler: get_a_patient.lambda_handler
+      CodeUri: get_a_patient
+      Handler: handler.lambda_handler
       Runtime: python3.8
       Layers:
         - !Ref ODBCLayerArn
