--- a/src/lambda-functions/patient/patient.yaml
+++ b/src/lambda-functions/patient/patient.yaml
@@ -31,6 +31,13 @@ Resources:
           DATABASE: !Ref Database
           USERNAME: !Ref Username
           PASSWORD: !Ref Password
+      Events:
+        GetRoot:
+          Type: Api
+          Properties:
+          Path: /patient/
+          Method: get
+          RestApiId: !ImportValue AppApiId
 # Outputs:
 #   GetAPatientFunctionArn:
 #     Description: "ARN of the GetAPatient function"
