--- a/src/infrastructure/infrastructure.yaml
+++ b/src/infrastructure/infrastructure.yaml
@@ -33,7 +33,7 @@ Resources:
       TemplateURL: ./api-gateway.yaml
       Parameters:
         StageName: !Ref StageName
-        UserPoolArn: !GetAtt CognitoStack.Outputs.UserPoolArn
+        UserPoolId: !GetAtt CognitoStack.Outputs.UserPoolId
 
 Outputs:
   CognitoUserPoolArn:
