--- a/src/lambda-functions/lambda-functions.yaml
+++ b/src/lambda-functions/lambda-functions.yaml
@@ -3,6 +3,10 @@ Transform: "AWS::Serverless-2016-10-31"
 Description: "Nested stack for all lambda functions"
 
 Parameters:
+  StageName:
+    Type: String
+  UserPoolArn:
+    Type: String
   DBHost:
     Type: String
     Description: "Database host address"
@@ -26,6 +30,8 @@ Resources:
     Properties:
       TemplateURL: patient/patient.yaml
       Parameters:
+        StageName: !Ref StageName
+        UserPoolArn: !Ref UserPoolArn
         DBHost: !Ref DBHost
         Database: !Ref Database
         Username: !Ref Username
