--- a/src/lambda-functions/patient/patient.yaml
+++ b/src/lambda-functions/patient/patient.yaml
@@ -71,6 +71,7 @@ Resources:
         CreateActivities:
           Type: Api
           Properties:
+            RestApiId: !Ref MyApi
             Path: /activities/{id}
             Method: get
       Policies:
