--- a/src/integrated-resource/integrated-resource.yaml
+++ b/src/integrated-resource/integrated-resource.yaml
@@ -15,9 +15,10 @@ Parameters:
 Resources:
   WaitingRoomStack:
     Type: AWS::CloudFormation::Stack
-    Properties: ./waiting-room.yaml
-    Parameters:
-      StageName: !Ref StageName
-      AppName: !Ref AppName
-      UserPoolArn: !Ref UserPoolArn
-      TableName: !Ref TableName
+    Properties:
+      TemplateURL: ./waiting-room.yaml
+      Parameters:
+        StageName: !Ref StageName
+        AppName: !Ref AppName
+        UserPoolArn: !Ref UserPoolArn
+        TableName: !Ref TableName
